[gd_scene load_steps=19 format=2]

[ext_resource path="res://script/lobby.gd" type="Script" id=1]
[ext_resource path="res://art_assets/branding/titlescreen.png" type="Texture" id=2]
[ext_resource path="res://art_assets/ui/flat/kenneyUI-red.tres" type="Theme" id=3]
[ext_resource path="res://art_assets/ui/ui.tres" type="Theme" id=4]
[ext_resource path="res://art_assets/tiles/tilemap.tres" type="TileSet" id=5]
[ext_resource path="res://art_assets/backgrounds/sky.png" type="Texture" id=6]
[ext_resource path="res://art_assets/players/player.png" type="Texture" id=7]
[ext_resource path="res://art_assets/ui/font/ui-font.tres" type="DynamicFont" id=8]
[ext_resource path="res://art_assets/ui/input.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 36, 31 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 315, 0, 105, 105 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 105, 105 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 210, 0, 105, 105 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 420, 0, 105, 105 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 525, 0, 105, 105 )

[sub_resource type="SpriteFrames" id=34]
animations = [ {
"frames": [ SubResource( 33 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
} ]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("transition:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "screen_transition"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("transition:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="lobby" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="background" type="Node2D" parent="."]

[node name="sprite" type="Sprite" parent="background"]
position = Vector2( -86, -264 )
z_index = -10
z_as_relative = false
texture = ExtResource( 6 )
centered = false

[node name="tiles" type="TileMap" parent="background"]
scale = Vector2( 0.5, 0.5 )
tile_set = ExtResource( 5 )
cell_size = Vector2( 70, 70 )
format = 1
tile_data = PoolIntArray( -4, 50, 0, -3, 50, 0, -2, 50, 0, -1, 50, 0, -65536, 50, 0, -65535, 50, 0, -65534, 50, 0, -65533, 50, 0, -65532, 50, 0, -65531, 50, 0, -65530, 50, 0, -65529, 50, 0, -65528, 50, 0, -65527, 50, 0, -65526, 50, 0, -65525, 50, 0, -65524, 50, 0, -65523, 50, 0, -65522, 50, 0, -65521, 50, 0, -65520, 50, 0, -65519, 50, 0, -65518, 50, 0, -65517, 50, 0, -65516, 50, 0, -65515, 50, 0, -65514, 50, 0, -65513, 50, 0, -65512, 50, 0, -65511, 50, 0, -65510, 50, 0, -65509, 50, 0, -65508, 50, 0, -65507, 50, 0, -65506, 50, 0, -65505, 50, 0, -65504, 50, 0, -65503, 50, 0, -65502, 50, 0, 65532, 50, 0, 34, 50, 0, 131068, 50, 0, 65570, 50, 0, 196604, 50, 0, 131106, 50, 0, 262140, 50, 0, 196642, 50, 0, 327676, 50, 0, 262178, 50, 0, 393212, 50, 0, 327714, 50, 0, 458748, 50, 0, 393250, 50, 0, 524284, 50, 0, 458786, 50, 0, 589820, 50, 0, 524322, 50, 0, 655356, 50, 0, 589858, 50, 0, 720892, 50, 0, 655363, 43, 0, 655365, 41, 0, 655366, 45, 0, 655367, 43, 0, 655368, 39, 0, 655372, 43, 0, 655373, 35, 0, 655374, 38, 0, 655384, 43, 0, 655386, 44, 0, 655387, 37, 0, 655388, 42, 0, 655394, 50, 0, 786428, 50, 0, 786429, 32, 0, 786430, 32, 0, 786431, 32, 0, 720896, 32, 0, 720897, 32, 0, 720898, 32, 0, 720899, 32, 0, 720900, 32, 0, 720901, 32, 0, 720902, 32, 0, 720903, 32, 0, 720904, 32, 0, 720905, 32, 0, 720906, 32, 0, 720907, 32, 0, 720908, 32, 0, 720909, 32, 0, 720910, 32, 0, 720911, 32, 0, 720912, 32, 0, 720913, 32, 0, 720914, 32, 0, 720915, 32, 0, 720916, 32, 0, 720917, 32, 0, 720918, 32, 0, 720919, 32, 0, 720920, 32, 0, 720921, 32, 0, 720922, 32, 0, 720923, 32, 0, 720924, 32, 0, 720925, 32, 0, 720926, 32, 0, 720927, 32, 0, 720928, 32, 0, 720929, 32, 0, 720930, 50, 0, 851964, 50, 0, 851965, 50, 0, 851966, 50, 0, 851967, 50, 0, 786432, 50, 0, 786433, 50, 0, 786434, 50, 0, 786435, 50, 0, 786436, 50, 0, 786437, 50, 0, 786438, 50, 0, 786439, 50, 0, 786440, 50, 0, 786441, 50, 0, 786442, 50, 0, 786443, 50, 0, 786444, 50, 0, 786445, 50, 0, 786446, 50, 0, 786447, 50, 0, 786448, 50, 0, 786449, 50, 0, 786450, 30, 0, 786451, 50, 0, 786452, 50, 0, 786453, 50, 0, 786454, 50, 0, 786455, 50, 0, 786456, 50, 0, 786457, 50, 0, 786458, 50, 0, 786459, 50, 0, 786460, 50, 0, 786461, 50, 0, 786462, 50, 0, 786463, 50, 0, 786464, 50, 0, 786465, 50, 0, 786466, 50, 0, 917500, 50, 0, 917501, 50, 0, 917502, 50, 0, 917503, 50, 0, 851968, 30, 0, 851969, 50, 0, 851970, 50, 0, 851971, 50, 0, 851972, 50, 0, 851973, 27, 0, 851974, 50, 0, 851975, 50, 0, 851976, 50, 0, 851977, 50, 0, 851978, 50, 0, 851979, 50, 0, 851980, 50, 0, 851981, 50, 0, 851982, 50, 0, 851983, 29, 0, 851984, 50, 0, 851985, 50, 0, 851986, 50, 0, 851987, 50, 0, 851988, 50, 0, 851989, 50, 0, 851990, 50, 0, 851991, 31, 0, 851992, 50, 0, 851993, 50, 0, 851994, 50, 0, 851995, 50, 0, 851996, 50, 0, 851997, 50, 0, 851998, 50, 0, 851999, 50, 0, 852000, 50, 0, 852001, 50, 0, 852002, 50, 0, 983036, 50, 0, 983037, 50, 0, 983038, 50, 0, 983039, 50, 0, 917504, 50, 0, 917505, 50, 0, 917506, 50, 0, 917507, 50, 0, 917508, 50, 0, 917509, 29, 0, 917510, 28, 0, 917511, 50, 0, 917512, 50, 0, 917513, 50, 0, 917514, 50, 0, 917515, 50, 0, 917516, 50, 0, 917517, 50, 0, 917518, 50, 0, 917519, 50, 0, 917520, 50, 0, 917521, 50, 0, 917522, 50, 0, 917523, 50, 0, 917524, 50, 0, 917525, 50, 0, 917526, 50, 0, 917527, 50, 0, 917528, 50, 0, 917529, 50, 0, 917530, 50, 0, 917531, 50, 0, 917532, 50, 0, 917533, 50, 0, 917534, 50, 0, 917535, 50, 0, 917536, 50, 0, 917537, 50, 0, 917538, 50, 0 )

[node name="timer" type="Timer" parent="background"]
wait_time = 6.0
autostart = true

[node name="jumptimer" type="Timer" parent="background"]
wait_time = 2.5
autostart = true

[node name="player" type="KinematicBody2D" parent="background"]

[node name="collision" type="CollisionShape2D" parent="background/player"]
position = Vector2( -41, 345 )
shape = SubResource( 35 )

[node name="sprite" type="AnimatedSprite" parent="background/player"]
position = Vector2( -40, 345 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 34 )
animation = "walk"
frame = 1
playing = true

[node name="texture" type="TextureRect" parent="."]
margin_left = 340.0
margin_top = 32.0
margin_right = 690.0
margin_bottom = 32.0
rect_min_size = Vector2( 350, 150 )
size_flags_horizontal = 4
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="cancel_container" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 32
custom_constants/margin_bottom = 32

[node name="cancel" type="Button" parent="cancel_container"]
visible = false
margin_left = 465.0
margin_top = 441.749
margin_right = 615.0
margin_bottom = 488.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource( 3 )
text = "Batalkan"

[node name="m" type="MarginContainer" parent="."]
margin_left = 192.0
margin_top = 155.0
margin_right = 888.0
margin_bottom = 441.0
size_flags_vertical = 0
theme = ExtResource( 4 )
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="v" type="VBoxContainer" parent="m"]
margin_left = 32.0
margin_top = 32.0
margin_right = 664.0
margin_bottom = 254.0

[node name="name_container" type="VBoxContainer" parent="m/v"]
margin_right = 632.0
margin_bottom = 69.0

[node name="label" type="Label" parent="m/v/name_container"]
margin_right = 632.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.329412, 0.329412, 0.329412, 1 )
text = "Masukan nama: "

[node name="name" type="LineEdit" parent="m/v/name_container"]
margin_top = 26.0
margin_right = 632.0
margin_bottom = 69.3529
text = "Pemain"

[node name="separator" type="Control" parent="m/v"]
margin_top = 73.0
margin_right = 632.0
margin_bottom = 89.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3

[node name="button_container" type="HBoxContainer" parent="m/v"]
margin_top = 93.0
margin_right = 632.0
margin_bottom = 135.0

[node name="search_server" type="Button" parent="m/v/button_container"]
margin_right = 314.0
margin_bottom = 42.6484
size_flags_horizontal = 3
text = "Cari room"

[node name="create_server" type="Button" parent="m/v/button_container"]
margin_left = 318.0
margin_right = 632.0
margin_bottom = 42.6484
size_flags_horizontal = 3
text = "Buat room"

[node name="server_list" type="VBoxContainer" parent="m/v"]
visible = false
margin_top = 139.0
margin_right = 632.0
margin_bottom = 196.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="label" type="Label" parent="m/v/server_list"]
margin_right = 632.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.329412, 0.329412, 0.329412, 1 )
text = "Daftar Room:"

[node name="s" type="ScrollContainer" parent="m/v/server_list"]
margin_top = 26.0
margin_right = 632.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="v" type="VBoxContainer" parent="m/v/server_list/s"]
margin_right = 632.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="room_setting" type="VBoxContainer" parent="m/v"]
visible = false
margin_top = 139.0
margin_right = 632.0
margin_bottom = 248.0

[node name="h" type="HBoxContainer" parent="m/v/room_setting"]
margin_right = 632.0
margin_bottom = 43.0

[node name="label" type="Label" parent="m/v/room_setting/h"]
margin_top = 10.0
margin_right = 111.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.329412, 0.329412, 0.329412, 1 )
text = "Jumlah Pemain:"

[node name="separator" type="Control" parent="m/v/room_setting/h"]
margin_left = 115.0
margin_right = 478.0
margin_bottom = 43.0
size_flags_horizontal = 3

[node name="player_number" type="SpinBox" parent="m/v/room_setting/h"]
margin_left = 482.0
margin_right = 632.0
margin_bottom = 43.3529
rect_min_size = Vector2( 150, 0 )
min_value = 2.0
max_value = 10.0
value = 2.0

[node name="separator" type="Control" parent="m/v/room_setting"]
margin_top = 47.0
margin_right = 632.0
margin_bottom = 63.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3

[node name="create" type="Button" parent="m/v/room_setting"]
margin_left = 241.0
margin_top = 67.0
margin_right = 391.0
margin_bottom = 109.648
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 4
text = "Buat room"

[node name="status" type="Label" parent="m/v"]
margin_top = 139.0
margin_right = 632.0
margin_bottom = 161.0
custom_colors/font_color = Color( 0.329412, 0.329412, 0.329412, 1 )
align = 1

[node name="label" type="Label" parent="."]
margin_left = 840.0
margin_top = 33.0
margin_right = 1066.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 8 )
text = "by kitakura & titisan balmond"

[node name="bottom" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -148.486
margin_top = -74.6484
theme = ExtResource( 4 )
custom_constants/margin_right = 32
custom_constants/margin_bottom = 32

[node name="tutorial" type="Button" parent="bottom"]
margin_right = 116.486
margin_bottom = 42.6484
size_flags_horizontal = 0
text = "Tutorial"

[node name="settings" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 128
custom_constants/margin_top = 64
custom_constants/margin_left = 128
custom_constants/margin_bottom = 64

[node name="rect" type="NinePatchRect" parent="settings"]
margin_left = 128.0
margin_top = 64.0
margin_right = 952.0
margin_bottom = 456.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 9 )
patch_margin_left = 31
patch_margin_top = 34
patch_margin_right = 33
patch_margin_bottom = 35

[node name="m" type="MarginContainer" parent="settings/rect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="transition" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/screen_transition = SubResource( 1 )

[connection signal="timeout" from="background/timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="background/jumptimer" to="." method="_on_jumptimer_timeout"]
[connection signal="pressed" from="cancel_container/cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="m/v/button_container/search_server" to="." method="_on_search_server_pressed"]
[connection signal="pressed" from="m/v/button_container/create_server" to="." method="_on_create_server_pressed"]
[connection signal="pressed" from="m/v/room_setting/create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="bottom/tutorial" to="." method="_on_tutorial_pressed"]
